Fix Android tab previews in tab selector

In this CL:
https://chromium-review.googlesource.com/c/chromium/src/+/637003

a call to CopyOutputRequest::CreateRequest() was accidentally changed to return
a bitmap instead of a texture. The passed-in callback is bound to a helper
function that expects a texture, which ended up preventing tabs from being read
into bitmaps. This CL fixes this issue.

Bug: 763150
Change-Id: I2f2dba76ab129349938a79d151a81ec81b5871c9
Reviewed-on: https://chromium-review.googlesource.com/656511
Reviewed-by: Yuri Wiitala <miu@chromium.org>
Reviewed-by: Ted Choc <tedchoc@chromium.org>
Reviewed-by: Theresa <twellington@chromium.org>
Commit-Queue: Ryan Landay <rlanday@chromium.org>
Cr-Commit-Position: refs/heads/master@{#500458}
Former-commit-id: d7cdcb3e2776e69567d4457099d7af97b48c1ff6